// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App views should render the browse page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "8235",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"202b-CCsZHGC8YhPtZCWMZFwK/Tr/p2Y\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the browse page successfully 2`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
 <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!--<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\">-->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
 
 <link rel=\\"stylesheet\\" href=\\"/static/styles/browse.css\\" />
</head>
<body class=\\"bg-light\\">
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span><strong> Swag Store</strong>	
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
      <form class=\\"form-inline mt-2 mt-md-0\\">
        <input class=\\"form-control mr-sm-2\\" type=\\"search\\" placeholder=\\"Search\\">
        <button class=\\"fa fa-search btn btn-outline-light my-2 my-sm-0\\" type=\\"submit\\"></button>
      </form>
    </div>   
</nav>
  </header>
  <div class=\\"content-container\\">
    <div class=\\"row\\">
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product1.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 1</h1>
            <p class=\\"price\\">$26.99</p>
            <p>A product.</p>
            <p><button onclick=\\"add_to_cart('1')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product2.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 2</h1>
            <p class=\\"price\\">$9.99</p>
            <p>Another product.</p>
            <p><button onclick=\\"add_to_cart('2')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product3.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 3</h1>
            <p class=\\"price\\">$10.50</p>
            <p>Wow, that&#39;s some product.</p>
            <p><button onclick=\\"add_to_cart('3')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product4.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 4</h1>
            <p class=\\"price\\">$6.00</p>
            <p>Cheap product.</p>
            <p><button onclick=\\"add_to_cart('4')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product5.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 5</h1>
            <p class=\\"price\\">$56.00</p>
            <p>Expensive product.</p>
            <p><button onclick=\\"add_to_cart('5')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product6.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 6</h1>
            <p class=\\"price\\">$31.26</p>
            <p>Man we&#39;re kind of running out of these, huh?</p>
            <p><button onclick=\\"add_to_cart('6')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product7.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 7</h1>
            <p class=\\"price\\">$5.49</p>
            <p>Oh wow this is even cheaper.</p>
            <p><button onclick=\\"add_to_cart('7')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product8.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 8</h1>
            <p class=\\"price\\">$10.69</p>
            <p>Nice.</p>
            <p><button onclick=\\"add_to_cart('8')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product9.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 9</h1>
            <p class=\\"price\\">$0.99</p>
            <p>Dollar store shelf material v2.0.</p>
            <p><button onclick=\\"add_to_cart('9')\\">Add to Cart</button></p>
          </div> 
        </div>
       
        <div class=\\"col-sm-4\\">
          <div class=\\"product-card\\">
            <div class=\\"img-container\\">
              <img class=\\"product-image\\" src=\\"/static/images/product10.jpg\\" alt=\\"Swag image\\" />
            </div>
            <h1>Product 10</h1>
            <p class=\\"price\\">$12.00</p>
            <p>Just your average product.</p>
            <p><button onclick=\\"add_to_cart('10')\\">Add to Cart</button></p>
          </div> 
        </div>
       
    </div>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  <script>
    function add_to_cart(id) {
      console.log(id);

      $.post('/api/cart/add', { productId: id }, (data, status) => {
        // Handle response data, or do nothing
        console.log(data);
        console.log(status);
        $('#badge-cart-size').text(data.products.reduce((total, product) => {
          return total + product.quantity;
        }, 0));
      });
    }
  </script>
</body>
</html>
"
`;

exports[`App views should render the cart page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "3278",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"cce-S+3oIypq2DgbTV5sa875PhEWpW4\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the cart page successfully 2`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
 <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!--<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\">-->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
 
 <link rel=\\"stylesheet\\" href=\\"/static/styles/browse.css\\" />
</head>
<body>
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span><strong> Swag Store</strong>	
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
      <form class=\\"form-inline mt-2 mt-md-0\\">
        <input class=\\"form-control mr-sm-2\\" type=\\"search\\" placeholder=\\"Search\\">
        <button class=\\"fa fa-search btn btn-outline-light my-2 my-sm-0\\" type=\\"submit\\"></button>
      </form>
    </div>   
</nav>
  </header>
  <div class=\\"content-container\\">
    <div class=\\"row\\">
    </div>
    Total: 12
    <br>
    <button type=\\"button\\" class=\\"btn btn-secondary\\"><a href=\\"/checkout\\">Checkout</a></button>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  </body>
</html>
"
`;

exports[`App views should render the checkout page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "11093",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"2b55-9D0Bg510Ekn0O34ycxFrBdZQJS0\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the checkout page successfully 2`] = `
"<!doctype html>
<html>
  <head>
    <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!--<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\">-->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
  </head>
  <body class=\\"bg-light\\">
    <header>
        <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span><strong> Swag Store</strong>	
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
      <form class=\\"form-inline mt-2 mt-md-0\\">
        <input class=\\"form-control mr-sm-2\\" type=\\"search\\" placeholder=\\"Search\\">
        <button class=\\"fa fa-search btn btn-outline-light my-2 my-sm-0\\" type=\\"submit\\"></button>
      </form>
    </div>   
</nav>
    </header>
    <div class=\\"container content-container\\">
      <div class=\\"row\\">
      <!--order-md2 makes the shipping address come before shopping cart, mb-4 spaces tile from previous row-->
        <div class=\\"col-md-4 order-md-2 mb-4\\">
          <h4 class=\\"d-flex justify-content-between align-items-center mb-3\\">
            <span class=\\"text-muted\\">Your cart</span>
            <!-- Optional feature to have total items in cart displayed-->
            <span class=\\"badge badge-secondary badge-pill\\">Total Items</span>
          </h4>
          <!-- creating unorderedlist to group all cart items, mb-3 is bottom margin of 16px if font size is 16px-->
          <ul class=\\"list-group mb-3\\">
          <!-- list-group-item: adding things to list, justify-content-between: format text spacing-->
            <li class=\\"list-group-item d-flex justify-content-between lh-condensed\\">
              <div>
                <!--set top and bottom margin to zero-->
                <h6 class=\\"my-0\\">List Cart Item</h6>
                <small class=\\"text-muted\\">Brief description</small>
              </div>
              <span class=\\"text-muted\\">$$$</span>
            </li>
            <li class=\\"list-group-item d-flex justify-content-between\\">
              <span>Total (USD)</span>
              <strong>Place Cart Total Here</strong>
            </li>
          </ul>
        </div>
        <div class=\\"col-md-8 order-md-1\\">
          <h4 class=\\"mb-3\\">Shipping address</h4>
          <!-- Begin form to check address-->
          <form id=\\"address-form\\" action=\\"#\\" method=\\"GET\\" class=\\"needs-validation\\">
            <div class=\\"row\\">
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"firstName\\">First name</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"firstName\\" placeholder=\\"John\\" value=\\"\\" required>
                <div class=\\"invalid-feedback\\">
                  Valid first name is required.
                </div>
              </div>
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"lastName\\">Last name</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"lastName\\" placeholder=\\"Doe\\" value=\\"\\" required>
                <div class=\\"invalid-feedback\\">
                  Valid last name is required.
                </div>
              </div>
            </div>

            <div class=\\"mb-3\\">
              <label for=\\"address\\">Street 1</label>
              <input type=\\"text\\" class=\\"form-control\\" name=\\"street1\\" id=\\"address\\" placeholder=\\"1234 Swagger Ln\\" required>
              <div class=\\"invalid-feedback\\">
                Please enter your shipping address.
              </div>
            </div>

            <div class=\\"mb-3\\">
              <label for=\\"address2\\">Street 2 <span class=\\"text-muted\\">(Optional)</span></label>
              <input type=\\"text\\" class=\\"form-control\\" name=\\"street2\\" id=\\"address2\\" placeholder=\\"Apartment or Suite\\">
            </div>

            <div class=\\"row\\">
              <div class=\\"col-md-5 mb-3\\">
                <label for=\\"country\\">Country</label>
                <select class=\\"custom-select d-block w-100\\" id=\\"country\\" required>
                  <option value=\\"\\">Choose...</option>
                  <option>United States</option>
                </select>
                <div class=\\"invalid-feedback\\">
                  Please select a valid country.
                </div>
              </div>
              <div class=\\"col-md-4 mb-3\\">
                <label for=\\"state\\">State</label>
				        <input type=\\"text\\" class=\\"form-control\\" name=\\"state\\" id=\\"state\\" placeholder=\\"Your State\\">
                <div class=\\"invalid-feedback\\">
                  Please provide a valid state.
                </div>
              </div>
              <div class=\\"col-md-4 mb-3\\">
                <label for=\\"city\\">City</label>
				        <input type=\\"text\\" class=\\"form-control\\" name=\\"city\\" id=\\"city\\" placeholder=\\"Your City\\">
                <div class=\\"invalid-feedback\\">
                  Please provide a valid city.
                </div>
              </div>              
              <div class=\\"col-md-3 mb-3\\">
                <label for=\\"zip\\">Zip Code</label>
                <input type=\\"text\\" class=\\"form-control\\" name=\\"zipcode\\" id=\\"zip\\" placeholder=\\"XXXXX\\" required>
                <div class=\\"invalid-feedback\\">
                  Zip code required.
                </div>
              </div>
            </div>

            <!-- Temporary address validation button -->
            <button class=\\"btn btn-secondary btn-md\\" type=\\"submit\\">Validate Address</button>
          </form>
            <h4 class=\\"mb-3\\">Payment</h4>

            <div class=\\"d-block my-3\\">
              <div class=\\"custom-control custom-radio\\">
                <input id=\\"credit\\" name=\\"paymentMethod\\" type=\\"radio\\" class=\\"custom-control-input\\" checked required>
                <label class=\\"custom-control-label\\" for=\\"credit\\">Credit card</label>
              </div>
              <div class=\\"custom-control custom-radio\\">
                <input id=\\"debit\\" name=\\"paymentMethod\\" type=\\"radio\\" class=\\"custom-control-input\\" required>
                <label class=\\"custom-control-label\\" for=\\"debit\\">Debit card</label>
              </div>
              <div class=\\"custom-control custom-radio\\">
                <input id=\\"paypal\\" name=\\"paymentMethod\\" type=\\"radio\\" class=\\"custom-control-input\\" required>
                <label class=\\"custom-control-label\\" for=\\"paypal\\">Paypal</label>
              </div>
            </div>
            <div class=\\"row\\">
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"cc-name\\">Name on card</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-name\\" required>
                <small class=\\"text-muted\\">Full name as displayed on card</small>
                <div class=\\"invalid-feedback\\">
                  Name on card is required
                </div>
              </div>
              <div class=\\"col-md-6 mb-3\\">
                <label for=\\"cc-number\\">Credit card number</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-number\\" required>
                <div class=\\"invalid-feedback\\">
                  Credit card number is required
                </div>
              </div>
            </div>
            <div class=\\"row\\">
              <div class=\\"col-md-3 mb-3\\">
                <label for=\\"cc-expiration\\">Expiration</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-expiration\\" required>
                <div class=\\"invalid-feedback\\">
                  Expiration date required
                </div>
              </div>
              <div class=\\"col-md-3 mb-3\\">
                <label for=\\"cc-expiration\\">CVV</label>
                <input type=\\"text\\" class=\\"form-control\\" id=\\"cc-cvv\\" required>
                <div class=\\"invalid-feedback\\">
                  Security code required
                </div>
              </div>
            </div>
            <hr class=\\"mb-4\\">
            <button class=\\"btn btn-dark btn-lg btn-block\\" type=\\"submit\\">Checkout</button>
        </div>
      </div>
   </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  <script>
    $('#address-form').on('submit', function validateAddress(e) {
      e.preventDefault(); // Stop default form submission

      // Get address parts
      const street1 = $('#address').val();
      const street2 = $('#address2').val();
      const state = $('#state').val();
      const city = $('#city').val();
      const zipcode = $('#zip').val();

      $.get(
        \`/api/validate?street1=\${street1}&street2=\${street2}&state=\${state}&city=\${city}&zipcode=\${zipcode}\`,
        function(data) {
          // TODO: handle address verification result here
          // display on webpage in some way
          // check console (ctrl-shift-j in browser) to see response structure
          // or, see the google doc
          console.log(data);
        }
      );
    });
  </script>
 </body>
</html>
"
`;

exports[`App views should render the root/home page successfully 1`] = `
Object {
  "connection": "close",
  "content-length": "3367",
  "content-type": "text/html; charset=utf-8",
  "etag": "W/\\"d27-8PQCkjFWpN1jSWs2uMWf/IVZKPE\\"",
  "x-powered-by": "Express",
}
`;

exports[`App views should render the root/home page successfully 2`] = `
"<!DOCTYPE html>
<html>
<!-- stock head file that contains all pages metadata-->
<head>
 <!-- stock head file that contains all pages metadata-->
<title>COSC4351 Bartholome-Le-Habib Ecommerce Store</title>
<meta charset=\\"utf-8\\">
<!--Automatically re-adjusts view based on device dimensions-->
<meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1, shrink-to-fit=no\\">
<!--Loading CSS from Bootstrap CDN-->
<!--<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css\\">-->
<link rel=\\"stylesheet\\" href=\\"https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css\\" integrity=\\"sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm\\" crossorigin=\\"anonymous\\">
<script src=\\"https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js\\"></script>
<script src=\\"https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js\\"></script>
<link rel=\\"stylesheet\\" href=\\"https://use.fontawesome.com/releases/v5.7.0/css/all.css\\" integrity=\\"sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ\\" crossorigin=\\"anonymous\\">
<link rel=\\"stylesheet\\" href=\\"/static/styles/header.css\\" />
<link rel=\\"stylesheet\\" href=\\"/static/styles/global.css\\" />
 
 <link rel=\\"stylesheet\\" href=\\"/static/styles/home.css\\" />
</head>
<body class=\\"bg-light\\">
  <header>
    <!-- views/header.ejs -->
<!-- creates inverted (black) navigation bar w/ top that is fixed-->
<nav class=\\"navbar navbar-expand-md navbar-dark unique-color-dark fixed-top\\">
    <!-- Brand/logo -->
    <a class=\\"navbar-brand nav-link disabled\\" href=\\"/\\">
      <span class =\\"fas fa-glasses\\"></span><strong> Swag Store</strong>	
    </a>
    <button class=\\"navbar-toggler\\" type=\\"button\\" data-toggle=\\"collapse\\" data-target=\\"#navbarResponsive\\">
        <span class=\\"navbar-toggler-icon\\"></span>
    </button>
    <div class=\\"collapse navbar-collapse\\" id=\\"navbarResponsive\\">
      <!-- Links -->
      <ul class=\\"navbar-nav\\">
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/\\">Home</a>
        </li>
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/browse\\">Browse</a>
        </li>
      </ul>
      <ul class=\\"navbar-nav ml-auto\\">
        <li class=\\"nav-item\\"> 
          <a class=\\"nav-link\\" href=\\"/cart\\">
              <span class=\\"fas fa-shopping-cart\\"></span>
              Cart
              <span class=\\"badge badge-pill badge-light\\" id=\\"badge-cart-size\\">2</span>
          </a>
        </li> 
        <li class=\\"nav-item\\">
          <a class=\\"nav-link\\" href=\\"/checkout\\"><span class=\\"fas fa-shopping-bag\\"></span> Checkout</a>
        </li>
      </ul>
      <form class=\\"form-inline mt-2 mt-md-0\\">
        <input class=\\"form-control mr-sm-2\\" type=\\"search\\" placeholder=\\"Search\\">
        <button class=\\"fa fa-search btn btn-outline-light my-2 my-sm-0\\" type=\\"submit\\"></button>
      </form>
    </div>   
</nav>
  </header>
  <div class=\\"jumbotron jumbotron-fluid text-center\\">
    <div class =\\"container\\">
    <h1 class=\\"display-2\\">Swag Store</h1>
    <span class =\\"fas fa-glasses fa-4x\\"></span> 
    <p class=\\"lead\\"><strong>Put some swagger in your stride</strong></p>
    </div>
  </div>
  <footer class=\\"container-fluid text-center\\">
    
<p>© 2020 Copyright: Le-Bartholome-Habib</p>
  

  </footer>
  </body>
</html>
"
`;
